// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "default": Object {
    "images": Array [
      Object {
        "height": 100,
        "path": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "srcSet": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "toString": [Function],
  },
}
`;

exports[`doesn't emit file 1`] = `
Object {
  "default": Object {
    "height": 225,
    "images": Array [
      Object {
        "height": 225,
        "path": "foobar/67ae90e5ceacec74bab20ac659767e66-250.jpg",
        "width": 250,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/67ae90e5ceacec74bab20ac659767e66-250.jpg",
    "srcSet": "foobar/67ae90e5ceacec74bab20ac659767e66-250.jpg 250w",
    "toString": [Function],
    "width": 250,
  },
}
`;

exports[`jpg to webp 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/d28e1113fe9e5f4738f4fd1a28c42667-750.webp",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/6b3bdb311d06c205f104164226695cbf-1000.webp",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp",
    "srcSet": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp 500w,foobar/d28e1113fe9e5f4738f4fd1a28c42667-750.webp 750w,foobar/6b3bdb311d06c205f104164226695cbf-1000.webp 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`multiple sizes 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/img/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/img/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/img/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg 750w,foobar/img/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/test/3d23eaf671472cc14e6ba00e6b98e2b7-750x675.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/test/1e07c81d23028bb7eeed24cbdfb20f5c-1000x900.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg",
    "srcSet": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg 500w,foobar/test/3d23eaf671472cc14e6ba00e6b98e2b7-750x675.jpg 750w,foobar/test/1e07c81d23028bb7eeed24cbdfb20f5c-1000x900.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`override min and max with size 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
        "width": 100,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
    "srcSet": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg 100w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/cb279ae3edb2c00c909301c554ec09e9-200.jpg",
        "width": 200,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
    "srcSet": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg 100w,foobar/cb279ae3edb2c00c909301c554ec09e9-200.jpg 200w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`parses json notation 1`] = `
Object {
  "default": Object {
    "height": 45,
    "images": Array [
      Object {
        "height": 45,
        "path": "foobar/b67b9358907c5be0da0fb4b83636b2ea-50.webp",
        "width": 50,
      },
      Object {
        "height": 90,
        "path": "foobar/54bf3fc41335b948fdcae9a24a325d98-100.webp",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/cc49e04256692ae889b7b66e14bfe295-200.webp",
        "width": 200,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/b67b9358907c5be0da0fb4b83636b2ea-50.webp",
    "srcSet": "foobar/b67b9358907c5be0da0fb4b83636b2ea-50.webp 50w,foobar/54bf3fc41335b948fdcae9a24a325d98-100.webp 100w,foobar/cc49e04256692ae889b7b66e14bfe295-200.webp 200w",
    "toString": [Function],
    "width": 50,
  },
}
`;

exports[`png 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/e3d9eb07e206198dc8fe1686199234c2-500.png",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/4537f77756262d8a3e0201ddadedeebe-513.png",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/e3d9eb07e206198dc8fe1686199234c2-500.png",
    "srcSet": "foobar/e3d9eb07e206198dc8fe1686199234c2-500.png 500w,foobar/4537f77756262d8a3e0201ddadedeebe-513.png 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/542e5024c6042b5671cec135d35bcc06-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/a9490550db146ab84781bb723bbba222-513.jpg",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/542e5024c6042b5671cec135d35bcc06-500.jpg",
    "srcSet": "foobar/542e5024c6042b5671cec135d35bcc06-500.jpg 500w,foobar/a9490550db146ab84781bb723bbba222-513.jpg 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to webp with transparent background 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/7de8cabd3cff8024837652dfdc2695b6-500.webp",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/4f7c799981494fbaec5b08239740740b-513.webp",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/7de8cabd3cff8024837652dfdc2695b6-500.webp",
    "srcSet": "foobar/7de8cabd3cff8024837652dfdc2695b6-500.webp 500w,foobar/4f7c799981494fbaec5b08239740740b-513.webp 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`progressive image 1`] = `
Object {
  "default": Object {
    "height": 684,
    "images": Array [
      Object {
        "height": 684,
        "path": "foobar/b3fdb69948fa5859f854bcfc932cc49a-760.jpg",
        "width": 760,
      },
      Object {
        "height": 864,
        "path": "foobar/8273e88d2951e2524334dfd80851f2e3-960.jpg",
        "width": 960,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/b3fdb69948fa5859f854bcfc932cc49a-760.jpg",
    "srcSet": "foobar/b3fdb69948fa5859f854bcfc932cc49a-760.jpg 760w,foobar/8273e88d2951e2524334dfd80851f2e3-960.jpg 960w",
    "toString": [Function],
    "width": 760,
  },
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "public/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "public/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,public/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg 750w,public/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`single size 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "default": Object {
    "height": 540,
    "images": Array [
      Object {
        "height": 540,
        "path": "foobar/4389f2f6f6c5682bd93df363c0219698-600.jpg",
        "width": 600,
      },
      Object {
        "height": 630,
        "path": "foobar/cfaa2ddd023a178e5f56e03bcd9b318c-700.jpg",
        "width": 700,
      },
      Object {
        "height": 720,
        "path": "foobar/0c372b8744bd1108f4dfaeb2e348984c-800.jpg",
        "width": 800,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/4389f2f6f6c5682bd93df363c0219698-600.jpg",
    "srcSet": "foobar/4389f2f6f6c5682bd93df363c0219698-600.jpg 600w,foobar/cfaa2ddd023a178e5f56e03bcd9b318c-700.jpg 700w,foobar/0c372b8744bd1108f4dfaeb2e348984c-800.jpg 800w",
    "toString": [Function],
    "width": 600,
  },
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
        "width": 100,
      },
      Object {
        "height": 150,
        "path": "foobar/4410a9656a40e9167a67e0c1b30f945d-167.jpg",
        "width": 167,
      },
      Object {
        "height": 211,
        "path": "foobar/a1157a3f689d00588d99b4ee616a9186-234.jpg",
        "width": 234,
      },
      Object {
        "height": 270,
        "path": "foobar/d302b172bf2686f8d4d0e557d571b447-300.jpg",
        "width": 300,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
    "srcSet": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg 100w,foobar/4410a9656a40e9167a67e0c1b30f945d-167.jpg 167w,foobar/a1157a3f689d00588d99b4ee616a9186-234.jpg 234w,foobar/d302b172bf2686f8d4d0e557d571b447-300.jpg 300w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 600,
        "path": "foobar/248c69e606913e9d0e9a75acb534b45a-667.jpg",
        "width": 667,
      },
      Object {
        "height": 751,
        "path": "foobar/3be27c640e759379acd0d1512b8de5db-834.jpg",
        "width": 834,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/248c69e606913e9d0e9a75acb534b45a-667.jpg 667w,foobar/3be27c640e759379acd0d1512b8de5db-834.jpg 834w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with placeholder image 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgICAwAAAAAAAAAAAAAAAAcDBgEIAgQF/8QALhAAAQMDAgUEAQMFAAAAAAAAAQIDBAAFEQYhBxIxQVEIEyJhIxQycVKBgpGx/8QAGAEAAwEBAAAAAAAAAAAAAAAAAAECAwT/xAAcEQADAAMAAwAAAAAAAAAAAAAAAQIDETEEEiL/2gAMAwEAAhEDEQA/APJvfp1RImtJtNxhwIhV+ZXtLLiE+EjJCs/ZGK6S/TM+Lmy43qtp2GFkupdhEOY7AYVg/ecVsm66xHjuyH3G22WUlbjitkpSBkknsKUWp/UJoy1yVMWuLMvKk7F1rDLJP0pW5/nFdDmV0zTZV756ZrRJaK7df5MSRvuY6VNn+U5GP7GqtJ9OWrbPIizrRdrdc3WlZdaWCwf8Scg7ecU1NCce9NaivLFrnW2VZ35KuRp1x1LjRV2BIAKc+SMU1mZkF/HsS4rvMeUcjyFZPjY9aTiKRU1UtNCS0bwckLkszdWOMFtB5v0TCuYKI/rX3H0OvminiUA7f9opRgxwtJGuTysuR7piV1Xw919drLLGq+Iq3rewwtxbTf421cqSfngAEbdTmtaP0fuKy0tDrYAOUfLI6b+K32lW6JLhuxpbCX2n0lDrLnyQsHYgg7EHxS/vnCSLK1bA1Da0wICoykh1kRgWnEp/aQlOMKH+unipqN8MlWhDcM+Gl6vjs18EQH7a8lHtyQUq5inm6dtiKbXCXhlM03raPe3H44ZQhS5Y5+bnfIUAEjA+IyDk981eL7ar0sKQkIUqV8XJLbX5OYD4kkHI8ZPSp+Flt1Axp1TeonnH30SnPafWkBTreRgkDp3xUqPoPZ6LgCle42HcYorHsFOSDtRXQQSoTkk5NcV7HIJooofAMNKKgoqwalVsgDzRRQgAbjJ6nrRRRTA//9k=",
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/3d23eaf671472cc14e6ba00e6b98e2b7-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;
